Fix units getting clipped on mobile

--- a/ui/src/style.css
+++ b/ui/src/style.css
@@ -43,10 +43,10 @@ main {
 
 #main-canvas {
   height: 100%;
-  width: 97%;
+  width: 92%;
 }
 
 #units-canvas {
   height: 100%;
-  width: 3%;
+  width: 8%;
 }
